css/styles.css
@import url('./var.css');

/* Header */
header {
    margin-top: 70px;
}
header .nav {
    /* * Contain */

    background-color: var(--white);
    display: flex;
    flex-direction: row ;
    justify-content: space-between;
    width: 100%;
    height: 70px;
    padding: 5px;

    /* * Flex properties */

    border-radius: 2px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 3;
    border-bottom: 1px solid rgb(177, 175, 175);
}

.nav-linkedin-icon {
    width: 27px;
    height: 27px;
    margin: 18px 5px;
    background-image: url("https://cdn-icons-png.flaticon.com/512/174/174857.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

/*Input header*/

.nav-search {
    display: flex;
    width: 50%;
    height: 40px;
    border: 1px solid var(--black);
    margin-top: 12px;
    border-radius: 5px;
    padding: 5px;
    align-items: center;
}

.nav-search input {
    width: 65%;
    outline: none;
    border: none;
}
.nav-search-icon {
    background-image: url('https://www.freeiconspng.com/thumbs/search-icon-png/search-icon-png-18.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    background-color: transparent;
    width: 20px;
    height: 20px;
    justify-self: center;
    margin-right: 5px;
}

/* User image */

.nav-image {
    display: flex;
    justify-content: end;
    min-width: 80px;
    width: 37%;
    /* border: 1px solid black; */
    padding: 5px;
    place-content: end;
    height: 90%;
    margin-top: 5px;
    margin-right: 16px;
}

.nav-image_content {
    width: 27px;
    min-width: 25px;
    height: 27px;
    min-height: 27px;
    place-self: center;
    border-radius: 49.9%;
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    border: 0.5px solid var(--grey);
    margin-right: 16px;
}

/* Character section */

.card-character {
    display: grid;
    grid-template-columns: 100%;
    grid-auto-rows: repeat(100px 50px 3fr);
    margin: 10px 0px;
    margin-left: 12px;
    /* box-shadow: 0px -5px 1px 0px rgb(0 0 0 / 20%) */
}
.port-photo img {
    width: 100%;
    height: 80%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.profile-image {
    width: 130px;
    height: 130px;
    border: 2px solid #fff;
    margin: -87px 0 14px;
    border-radius: 100%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 20%);

    /* * Medidas del relative */
    position: relative;
    top: -20px;
    margin-left: 10px;
} 

.card-character p {
    justify-self: initial;
    margin-left: 12px;
    /*  */
}
.character-name {
    font-size: 3rem;
    font-weight: 500;
}
.character-type {
    font-size: 2rem;
    color: var(--black);
}
.character-location {
    font-size: 2rem;
    color: var(--grey);
}
.character-info {
    font-size: 2rem;
    color: var(--grey);
    margin-bottom: 15px;
}

/* Button to refresh characters */

.btn-refresh {
    /* * Container */
    background-color: var(--blue-lk);
    display: flex;
    width: 272px;
    max-width: 272px;
    height: 40px;
    /* * Foint */
    color: var(--white);
    font-weight: 600;
    font-size: 1.5rem;
    /* * Other */
    justify-content: center;
    place-items: center;
    border-radius: 25px;
    border: none;
    margin: 0 auto;
    margin-bottom: 20px;
    cursor: pointer;
}

/* Link section */

.link-container {
    width: 100%;
    margin-left: 12px;
    height: auto;
    border-bottom: 1px solid rgb(177, 175, 175);
    margin-left: 24px;
}

.link-container a {
    font-size: 2rem;
    text-decoration: none;
    outline: none;
    cursor: pointer;
    margin-left: 8px;
    color: var(--blue-lk);
    cursor: pointer;
}
.link-container div {
    display: flex;
    place-items: center;
    margin-top: 16px;
}

.link-container div:last-child {
    margin-bottom: 50px;
}

.link-container div img {
    width: 22px;
    height: 22px;
    background-color: transparent;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

/* Section Acerca de */

.section-about {
    width: 100%;
    margin: 16px 2px 16px 2px;
    border-bottom: 1px solid rgb(177, 175, 175);
}
.section-about p{
    font-size: 2rem;
}
.section-about p:nth-child(1) {
    font-size: 3rem;
    font-weight: 300;
    margin-bottom: 8px;
}
.section-about p:nth-child(2) {
    font-size: 2rem;
    font-weight: 100;
    margin-bottom: 8px;
    text-align: left;
}

/* notice section */ 

/* h2 img p */

.notice {
    margin-top: 24px;
    display: grid;
    gap: 10px;
    width: 85%;
    margin-left: 12px;
}

.notice img {
    width: 250px;
    max-width: 250px;
    height: 200px;
    max-height: 200px;
    margin: 0 auto;
}

.notice h2 {
    font-size: 3rem;
    font-weight: 300;
    justify-self: center;
}
.notice p {
    font-size: 2rem;
    font-weight: 300;
    text-align: left;
    margin-left: 12px;
}

.name-linked {
    margin-left: 12px;
    font-size: 1.7rem;
    font-weight: 100;
    color: grey;
}

@media screen and (max-width: 700px) {
    .p-join {
        display: none;
    }
    .btn-join {
        display: none;
    }
}

@media screen and (min-width: 700px){
    /* Section nav bar on tablet or desktop */

    header .nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .nav-linkedin-icon {
        width: 90px;
        height: 30px;
        margin: 18px 5px;
        background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/2560px-LinkedIn_Logo.svg.png");
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        margin-left: 24px;
        border: none;
        background-color: transparent;
    }

    .nav-search {
        display: grid;
        grid-template-columns: 48px 156px 156px 28px;
        grid-template-rows: repeat(1, auto);
        grid-row: 1fr auto;
        height: 30px;
        margin: 0;
        width: auto;
        align-self: initial;
        background-color: rgb(225, 230, 235);
        border: none;
    }
    .nav-search input {
        display: none;
    }
    .nav-image {
        display: none;
    }
    .people-container {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        justify-items: center;
        border-right: 1px solid rgb(102, 101, 101);
    }
    .people-container :nth-child(1) {
        width: auto;
        font-size: bold;
        color: rgb(102, 101, 101);
    }
    .people-container :nth-child(2) {
        background-image: url("https://www.pngall.com/wp-content/uploads/6/Caret-Symbol-PNG-Clipart.png");
        width: 10px;
        height: 10px;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        /* border: 0.5px black solid; */
        background-color: transparent;
    }
    .nav-search p {
        text-align: left;
        margin-left: 8px;
        border-right: 1px solid rgb(102, 101, 101);
    }
    .nav-search-icon {
        width: 16px;
        height: 16px;
        justify-self: center;
    }
    .p-join {
        width: auto;
        font-weight: 500;
        color: rgb(102, 101, 101);
    }
    .btn-join {
        background-color: var(--white);
        /* * Foint */
        color: var(--blue-lk);
        font-weight: 600;
        font-size: 1.3rem;
        padding: 6px;
        margin-right: 16px;
        /* * Other */
        border-radius: 25px;
        border: 1px var(--blue-lk) solid;
        cursor: pointer;
    }

}

